--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </head>
 
 <body>
-    <h1 style="padding-top: 20px; text-align: center;">
+    <h1 style="padding-top: 20px; text-align: center; font-size: 48px;">
         It's 2020 Bitches!
         <p style="color: #444; font-size: 16px;">What time is it? It's Track-Your-Resolution time</p>
     </h1>
